# birdfeeder-device

./: .gitignore  README.md  pyproject.toml
src/: bird_detector.py  camera.py  main.py
src/device/: bird_detector.py  camera.py  main.py  motion_sensor.py
tests/: test_bird_detector.py
